Half of diskserver completed
Have not managed to remove everything from my PC

--- a/project/clientserver-main/src/Makefile
+++ b/project/clientserver-main/src/Makefile
@@ -24,13 +24,14 @@ LDFLAGS   = -g -L../lib
 LDLIBS = -lclientserver
 
 # Targets
-PROGS = memserver client
+PROGS = memserver client diskserver
 
 all: $(PROGS)
 
 # Targets rely on implicit rules for compiling and linking
 # The dependency on libclientserver.a is not defined.
 memserver: memserver.o connection.o server.o
+diskserver: diskserver.o connection.o server.o
 client: connection.o
 
 SRC = $(wildcard *.cc)
